--- a/src/components/ListOfGifs/styles.css
+++ b/src/components/ListOfGifs/styles.css
@@ -4,14 +4,14 @@
 
 .ListOfGifs {
   display: grid;
-  min-height: 100vh;
+  grid-gap: 0 1%;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 0 16px;
-  align-items: center;
   grid-template-rows: masonry;
+  min-height: 100vh;
 }
 
 .ListOfGifs-item {
+
   background-color: #eee;
   display: inline-block;
   width: 100%;
