--- a/src/components/Spinner/styles.css
+++ b/src/components/Spinner/styles.css
@@ -1,37 +1,46 @@
 .lds-ring {
-  display: inline-block;
-  position: relative;
-  margin: 0 auto;
-  width: 80px;
-  height: 80px;
+	display: flex;
+	align-items: center;
+	height: 37px;
+	padding-top: 15px;
+	text-align: center;
+	justify-content: center;
+	margin: 0px auto;
 }
 
 .lds-ring div {
-  box-sizing: border-box;
-  display: block;
-  position: absolute;
-  width: 64px;
-  height: 64px;
-  margin: 8px;
-  border: 8px solid #8c58a3;
-  border-radius: 50%;
-  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-  border-color: #8c58a3 transparent transparent transparent;
+	display: inline-block;
+	height: 10px;
+	width: 10px;
+	position: relative;
+	box-shadow: rgba(0, 0, 0, 0.3) 0px 0px 20px;
+	margin: 37px 10px 10px;
+	animation: 0.75s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s infinite
+		alternate none running bouncer;
 }
-.lds-ring div:nth-child(1) {
-  animation-delay: -0.45s;
+
+.lds-ring div:nth-child(5n + 1) {
+	background-color: var(--brand-color_1);
 }
-.lds-ring div:nth-child(2) {
-  animation-delay: -0.3s;
+.lds-ring div:nth-child(5n + 2) {
+	animation-delay: calc(0.1s);
+	background-color: var(--brand-color_2);
 }
-.lds-ring div:nth-child(3) {
-  animation-delay: -0.15s;
+.lds-ring div:nth-child(5n + 3) {
+	animation-delay: calc(0.2s);
+	background-color: var(--brand-color_3);
 }
-@keyframes lds-ring {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+.lds-ring div:nth-child(5n + 4) {
+	animation-delay: calc(0.2s);
+	background-color: var(--brand-color_4);
+}
+.lds-ring div:nth-child(5n + 5) {
+	animation-delay: calc(0.4s);
+	background-color: var(--brand-color_5);
+}
+
+@keyframes bouncer {
+	100% {
+		transform: scale(1.75) translateY(-20px);
+	}
 }
