--- a/src/components/Category/Category.css
+++ b/src/components/Category/Category.css
@@ -1,28 +1,38 @@
 .Category-title {
-  color: white;
+  color: var(--theme-body-txt);
   font-weight: bold;
+  margin-bottom: 0.7rem;
+  margin-top: 0.6rem;
 }
 
 .Category-list {
   list-style-position: inside;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  padding: 0;
+  margin: 0;
 }
 
+.Category-list-item {
+	list-style: none;
+	padding: 0.3rem;
+	margin: 0.2rem;
+	font-size: 1.2rem;
+}
 .Category-link {
-  color: white;
+  color: inherit;
+  font-size: 1em;
+  text-decoration: none;
   font-size: 1em;
   transition: color ease-in 0.1s;
 }
 
-.Category-link:hover {
-  color: #8c55a2;
-}
-
-@media screen and (min-width: 640px) {
+@media screen and (min-width: 55rem) {
+  .Category-title{
+    text-align: right;
+  }
   .Category-list {
-    display: list-item;
+    justify-content: flex-end;
   }
 
   .Category-list li::before {
@@ -30,4 +40,25 @@
     margin-right: 0.5em;
     font-size: 1em;
   }
+}
+
+.Category-list-item:nth-child(5n + 1) {
+	background-color: var(--brand-color_1);
+	color: var(--theme-body-bg);
+}
+.Category-list-item:nth-child(5n + 2) {
+	background-color: var(--brand-color_2);
+	color: var(--theme-body-bg);
+}
+.Category-list-item:nth-child(5n + 3) {
+	background-color: var(--brand-color_3);
+	color: white;
+}
+.Category-list-item:nth-child(5n + 4) {
+	background-color: var(--brand-color_4);
+	color: white;
+}
+.Category-list-item:nth-child(5n + 5) {
+	background-color: var(--brand-color_5);
+	color: var(--theme-body-bg);
 }
